k8s/base/services/ldap/phpldapadmin/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: phpldapadmin
  namespace: ldap
spec:
  selector:
    app: phpldapadmin
  ports:
    - name: http
      port: 80
      targetPort: 80
      protocol: TCP
  type: ClusterIP
