k8s/base/services/ldap/phpldapadmin/ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: ldap-admin
  namespace: ldap
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`ldap.lffl.internal`)
      kind: Rule
      services:
        - name: phpldapadmin
          port: 80
